--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -5,14 +5,14 @@
       <%= link_to "< Companies", companies_path %>
     </div>
     <div class="col text-right">
-      <%= link_to "Edit", edit_company_path %>
+      <%= link_to "Edit", edit_company_path, class: 'btn btn-primary', title: "Edit #{@company.name}"%>
+      <%= link_to "Delete", company_path, method: :delete, class: 'btn btn-danger', data: {confirm: t('confirm')}, title: "Delete #{@company.name}"%>
     </div>
   </div>
   <div class="bg-success">
     <div class="container p-5 text-white">
       <h1><%= @company.name %></h1>
-      <h3>City, State</h3>
-      <pre>☝️ This is what needs to be udpated. Examples: Atlanta, GA or Nashvile, TN</pre>
+      <h3><%= display_city_and_state(@company) %></h3>
     </div>
   </div>
   <% if @company.description.present? %>
